# Bomberman

./: .gitignore  Bomberman  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  cpp_indie_studio  go.sh  save.txt
assets/: hao_Jun.7z  myfont.xml
assets/BONUS/AngryBirds/Red/: Red.SMD  Red_ColladaMax.DAE  Tag.txt
assets/BONUS/Hover Boots/: Hover Boots.mtl  Tag.txt
assets/BONUS/IronBoots/: Iron Boots.mtl  Tag.txt
assets/BONUS/MarioStar/: Mario's Star.blend  Mario's Star.mtl  Thumbs.db
assets/Bomb/Blacksmith/: Blacksmith.DAE  Blacksmith.mtl  Eyelids.DAE  Eyelids.mtl  Readme.txt  Tails.mtl
assets/Box/: ItmBox00.dae  ItmBox00.mtl  ItmBox01.dae  ItmBox01.mtl  ItmBox02.dae  ItmBox02.mtl  ItmCarrierBox00.dae  ItmCarrierBox00.mtl  ItmCarrierBox01.dae  ItmCarrierBox01.mtl  ItmCarrierBox02.dae  ItmCarrierBox02.mtl
assets/try/: Generic_Item.mesh
assetsB3D/: Scene 1.blend  Scene 1.blend1  Table.blend  Table.blend1  Table.blend2
cmake/Modules/: FindIrrKlang.cmake  FindIrrKlang.cmake~  FindIrrlicht.cmake  FindLua.cmake
includes/: AnimationEndCallback.hpp  Bomb.hpp  Bomb.hpp~  Character.hpp  EventReceiver.hpp  EventReceiver.hpp~  Explosion.hpp  Explosion.hpp~  Game.hpp  Highscore.hpp  IA.hpp  IObj.hpp  Irrlicht.hpp  Main.hpp  Map.hpp  Menu.hpp  Obj.hpp  Save.hpp
includes/sound/: MusicManager.hpp  SoundManager.hpp
includes/xml/: Score.hpp  ScoreManager.hpp
lib/tinyxml2/: cmake_uninstall.cmake  libtinyxml2.so.3  libtinyxml2.so.3.0.0  tinyxml2.pc  xmltest
lua/: main.lua
media/: bomb.3ds
media/song/: menusong.mp3bak
src/: APersonnage.hpp  AnimationEndCallback.cpp  Bomb.cpp  Bomb.cpp~  Character.cpp  EventReceiver.cpp  Exception.cpp  Exception.hpp  Explosion.cpp  Explosion.cpp~  Game.cpp  Game.hpp  Highscore.cpp  IA.cpp  IPersonnage.hpp  Irrlicht.cpp  Irrlicht.hpp  Main.cpp  Map.cpp  Menu.cpp  Menu.hpp  MyGauntlet  Obj.cpp  Save.cpp  Song.cpp  Song.hpp  Sound.cpp  Sound.hpp  XOXOXOXO.cpp  main.cpp  save  toto
src/Sound/: MusicManager.cpp  SoundManager.cpp
src/xml/: Score.cpp  ScoreManager.cpp
